# Spectral-Prefiltering-of-Neural-Fields

./: .gitignore  .gitmodules  README.md  gpt.md  pyproject.toml  requirements.txt  setup.py
Jupyter/: conv_theorem_figure.ipynb  dev.ipynb  fourier_step_vis.ipynb  multi_scale_vis.ipynb  ngssf.ipynb  other_vis.ipynb  paper_qualitative (1).ipynb  single_scale_vis.ipynb
scripts/: train.py
spnf/: __init__.py  data.py  encoding.py  model.py  sample.py  trainer.py  utils.py
spnf/configs/: train.yaml
